--- a/core-gateway/Cargo.toml
+++ b/core-gateway/Cargo.toml
@@ -15,5 +15,6 @@ reqwest = { version = "0.11", features = ["json"] }
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
+chrono = "0.4"
 
 scraper = "0.18"
