--- a/browser-service/tsconfig.json
+++ b/browser-service/tsconfig.json
@@ -2,10 +2,21 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
+    "lib": ["ES2020", "DOM"],
     "outDir": "./dist",
     "rootDir": "./src",
-    "strict": true,
+    "strict": false,
     "esModuleInterop": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "moduleResolution": "node"
+  },
+  "ts-node": {
+    "skipProject": false,
+    "compilerOptions": {
+      "module": "commonjs",
+      "lib": ["ES2020", "DOM"]
+    }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
